--- a/frontend/src/components/HighscoreDetails/HighscoreDetails.css
+++ b/frontend/src/components/HighscoreDetails/HighscoreDetails.css
@@ -1,31 +1,33 @@
 .highscore-details {
-  background: #fff;
+  position: relative;
+
+  background: var(--clr-background-primary);
   border-radius: 4px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
   margin: 20px auto;
   padding: 20px;
-  position: relative;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
 
   h3 {
-    margin: 0 0 10px 0;
+    color: var(--clr-primary);
     font-size: 1.2em;
-    color: var(--primary);
+    margin: 0 0 10px 0;
   }
 
   p {
-    margin: 0;
+    color: var(--clr-neutral-700);
     font-size: 0.9em;
-    color: #555;
+    margin: 0;
   }
 
   span {
     position: absolute;
     top: 20px;
     right: 20px;
-    cursor: pointer;
+    
     background: #f1f1f1;
-    padding: 6px;
     border-radius: 50%;
-    color: #333;
+    color: var(--clr-neutral-800);
+    cursor: pointer;
+    padding: 6px;
   }
 }
