Add hover/focus state

--- a/frontend/src/components/Chessboard/Square/Square.css
+++ b/frontend/src/components/Chessboard/Square/Square.css
@@ -12,4 +12,9 @@
   &.dark {
     background-color: var(--_clr-dark);
   }
+
+  &:hover,
+  &:focus-visible {
+    background-color: hsla(43, 74%, 49%, 0.75);
+  }
 }
