--- a/frontend/src/components/Chessboard/Square/Square.css
+++ b/frontend/src/components/Chessboard/Square/Square.css
@@ -17,4 +17,12 @@
   &:focus-visible {
     background-color: hsla(43, 74%, 49%, 0.75);
   }
+
+  &.correct {
+    background-color: hsla(120, 100%, 25%, 0.75);
+  }
+
+  &.incorrect {
+    background-color: hsla(0, 100%, 50%, 0.75);
+  }
 }
