--- a/frontend/src/components/Game/Game.css
+++ b/frontend/src/components/Game/Game.css
@@ -14,7 +14,7 @@
     box-shadow: 0px 4px 6px hsla(0, 0%, 0%, 0.2);
     color: var(--clr-neutral-000);
     cursor: pointer;
-    font-size: 2rem;
+    font-size: clamp(1rem, 3vw + 0.5rem, 2rem);
     font-weight: 700;
     padding: 10px 20px;
     transition: box-shadow 300ms ease;
@@ -28,4 +28,38 @@
   .chessboard {
     filter: blur(10px);
   }
+}
+
+.game-details {
+  font-size: clamp(1rem, 2vw + 0.5rem, 1.25rem);
+  margin: 0 auto;
+  width: min(600px, 100%);
+
+  header {
+    display: flex;
+    justify-content: space-between;
+
+    background-color: inherit;
+
+    p {
+      margin-bottom: 0;
+    }
+  }
+
+  main {
+    display: flex;
+    justify-content: space-between;
+
+    p {
+      display: grid;
+      justify-items: center;
+    }
+  }
+}
+
+.exit-button {
+  cursor: pointer;
+  font-size: clamp(1rem, 2vw + 0.5rem, 1.25rem);
+  padding: 0.25rem;
+  width: 100%;
 }
