--- a/frontend/src/components/Dialog/Dialog.css
+++ b/frontend/src/components/Dialog/Dialog.css
@@ -11,6 +11,10 @@
     margin-block: 10px;
   }
 
+  main {
+    font-size: clamp(1rem, 2vw + 0.5rem, 1.25rem);
+  }
+
   .game-information {
     display: flex;
     justify-content: space-around;
@@ -37,7 +41,7 @@
     button {
       transition: background-color 300ms ease;
     }
-    
+
     .btn-primary {
       background-color: var(--clr-primary);
       border: none;
@@ -46,10 +50,9 @@
 
       &:hover,
       &:focus-visible {
-        background-color: hsl(from var(--clr-primary ) h s 35%);
+        background-color: hsl(from var(--clr-primary) h s 35%);
       }
     }
-
   }
 
   &::backdrop {
