Style navigation text decoration

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -28,7 +28,8 @@ header {
       font-weight: 600;
 
       &:is(.active) {
-        text-decoration: underline !important;
+        text-decoration: underline solid 0.25rem!important;
+        text-underline-offset: 0.375rem;
       }
     }
   }
