--- a/frontend/src/components/Dialog/Dialog.css
+++ b/frontend/src/components/Dialog/Dialog.css
@@ -46,6 +46,7 @@
       background-color: var(--clr-primary);
       border: none;
       border-radius: 0.125rem;
+      color: var(--clr-neutral-100);
       padding: 0.75rem 1rem;
 
       &:hover,
@@ -56,6 +57,6 @@
   }
 
   &::backdrop {
-    background-color: hsla(0, 0%, 0%, 0.5);
+    background-color: hsla(0, 0%, 0%, 0.2);
   }
 }
