--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,8 @@
 :root {
   --clr-neutral-000: #fff;
   --clr-neutral-100: #f1f1f1;
+  --clr-neutral-200: #ccc;
+  --clr-neutral-300: #aaa;
   --clr-neutral-700: #555;
   --clr-neutral-800: #333;
   --clr-neutral-900: #1e1e1e;
