--- a/frontend/src/components/Highscores/Highscores.css
+++ b/frontend/src/components/Highscores/Highscores.css
@@ -2,8 +2,18 @@
   container-type: inline-size;
 }
 
-.highscores h2 {
-  color: var(--clr-neutral-800);
+.highscores {
+  h2 {
+    color: var(--clr-neutral-800);
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+    counter-reset: highscore-counter;
+  }
 }
 
 @container (min-width: 800px) {
