Increase play button color contrast

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@
 
   --clr-background-primary: var(--clr-neutral-000);
   --clr-background-secondary: var(--clr-neutral-100);
-  --clr-primary: #1aac83;
+  --clr-primary: #1c9e79;
   --clr-error: #e7195a;
 }
 
